# stream-infer

./: .gitignore  README-zh.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: publish.yml
examples/: algos.py  dynamic.py  dynamic_app.py  dynamic_process.py  dynamic_task_schedule.py  offline.py  offline_custom_process_record.py  offline_general.py  realtime.py  realtime_custom_process.py  realtime_general.py  server.py  streamlit_app.py  streamlit_dev.py
src/examples/: offline.py  server.py
src/stream_infer/: __init__.py  algo.py  dispatcher.py  inference.py  model.py  player.py  recorder.py  server.py  timer.py  trackers.py
src/stream_infer/collector/: base.py
src/stream_infer/dispatcher/: __init__.py  base.py  develop.py
src/stream_infer/exporter/: __init__.py  base.py
src/stream_infer/producer/: __init__.py  _imageio.py  _opencv.py  _pyav.py
src/stream_infer/util/: __init__.py  tracker.py
stream_infer/: __init__.py  algo.py  dynamic.py  inference.py  log.py  player.py  recorder.py  streamlit_.py  timer.py
stream_infer/dispatcher/: base.py  develop.py
stream_infer/producer/: __init__.py  _imageio.py  _opencv.py  _pyav.py
stream_infer/util/: __init__.py
tests/: .gitignore  offline_debug.py  realtime_debug.py
